feat: Add comprehensive documentation for tooling, profiling, and verification
- Introduced Chapter 6: Tooling / Profiling / Verification, detailing debugger, inspector, sampling profiler, PGO/profile saver, and verification mechanisms.
- Added Chapter 7: Build and Configuration, covering GN and CMake build systems, YAML to options generation, and common configuration points.
- Created an "All Pages" index for easy navigation of documentation.
- Implemented scripts for generating markdown indexes and syncing MkDocs symlinks.

--- a/.github/workflows/mkdocs-gh-pages.yml
+++ b/.github/workflows/mkdocs-gh-pages.yml
@@ -27,7 +27,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r mkdocs-requirements.txt
 
+      - name: Generate All Pages index
+        run: |
+          python3 tools/generate_all_pages.py
+          bash tools/sync_mkdocs_symlinks.sh
+
       - name: Deploy
         run: mkdocs gh-deploy --force
+
 
 
