--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,19 +68,24 @@ nav:
       - 总索引（概览）: 00_Master_Index.md
       - 方法论 Checklist: 00_Methodology_Wiki_Review_Checklist.md
       - 全量页面索引（必备）: All_Pages.md
+      - 各章概览（Stage1）:
+          - 01 Startup: 01_Startup_and_Entrypoints.md
+          - 02 Memory: 02_Memory_Management_and_Object_Model.md
+          - 03 ClassLoading: 03_Class_Loading_and_Linking.md
+          - 04 ExecutionEngine: 04_Execution_Engine_Interpreter_JIT_AOT.md
+          - 05 NativeBridge: 05_Native_Bridge_ANI_and_Interop.md
+          - 06 Tooling: 06_Tooling_Profiling_Verification.md
+          - 07 Build&Config: 07_Build_and_Configuration.md
   - 01 Startup:
-      - 概览（Stage1）: 01_Startup_and_Entrypoints.md
-      - 深入入口（Stage2/README）: 01_Startup/README.md
+      - 01_Startup/README.md
       - 深入路线图（Index）: 01_Startup/Index.md
       - Stage1 校正（Errata）: 01_Startup/Errata_to_Stage1.md
   - 02 Memory:
-      - 概览（Stage1）: 02_Memory_Management_and_Object_Model.md
-      - 深入入口（Stage2/README）: 02_Memory/README.md
+      - 02_Memory/README.md
       - 深入路线图（Index）: 02_Memory/Index.md
       - Stage1 校正（Errata）: 02_Memory/Errata_to_Stage1.md
   - 03 ClassLoading:
-      - 概览（Stage1）: 03_Class_Loading_and_Linking.md
-      - 深入入口（Stage2/README）: 03_ClassLoading/README.md
+      - 03_ClassLoading/README.md
       - 端到端主线（EndToEnd）: 03_ClassLoading/Flows/ClassLoading_EndToEnd.md
       - 新人最小调试手册: 03_ClassLoading/Newbie_MinDebug_Playbook.md
       - 深入路线图（Index）: 03_ClassLoading/Index.md
@@ -146,8 +151,7 @@ nav:
               - runtime_include_vtable_builder_variance-inl.h: 03_ClassLoading/FileNotes/runtime_include_vtable_builder_variance-inl.h.md
               - runtime_include_vtable_builder_variance.h: 03_ClassLoading/FileNotes/runtime_include_vtable_builder_variance.h.md
   - 04 ExecutionEngine:
-      - 概览（Stage1）: 04_Execution_Engine_Interpreter_JIT_AOT.md
-      - 深入入口（Stage2/README）: 04_ExecutionEngine/README.md
+      - 04_ExecutionEngine/README.md
       - 端到端主线（EndToEnd）: 04_ExecutionEngine/Flows/ExecutionEngine_EndToEnd.md
       - 新人最小调试手册: 04_ExecutionEngine/Newbie_MinDebug_Playbook.md
       - 深入路线图（Index）: 04_ExecutionEngine/Index.md
@@ -254,8 +258,7 @@ nav:
               - runtime_templates_bridge_dispatch_dyn.S.erb: 04_ExecutionEngine/FileNotes/runtime_templates_bridge_dispatch_dyn.S.erb.md
               - runtime_templates_plugins_interpreters-inl.h.erb: 04_ExecutionEngine/FileNotes/runtime_templates_plugins_interpreters-inl.h.erb.md
   - 05 NativeBridge:
-      - 概览（Stage1）: 05_Native_Bridge_ANI_and_Interop.md
-      - 深入入口（Stage2/README）: 05_NativeBridge/README.md
+      - 05_NativeBridge/README.md
       - 深入路线图（Index）: 05_NativeBridge/Index.md
       - Stage1 校正（Errata）: 05_NativeBridge/Errata_to_Stage1.md
       - 专题索引:
@@ -282,13 +285,11 @@ nav:
               - plugins_ets_runtime_interop_js_interop_context.h: 05_NativeBridge/FileNotes/plugins_ets_runtime_interop_js_interop_context.h.md
               - plugins_ets_runtime_interop_js_interop_context_api.h: 05_NativeBridge/FileNotes/plugins_ets_runtime_interop_js_interop_context_api.h.md
   - 06 Tooling:
-      - 概览（Stage1）: 06_Tooling_Profiling_Verification.md
-      - 深入入口（Stage2/README）: 06_Tooling_Profiling_Verification/README.md
+      - 06_Tooling_Profiling_Verification/README.md
       - 深入路线图（Index）: 06_Tooling_Profiling_Verification/Index.md
       - Stage1 校正（Errata）: 06_Tooling_Profiling_Verification/Errata_to_Stage1.md
   - 07 Build&Config:
-      - 概览（Stage1）: 07_Build_and_Configuration.md
-      - 深入入口（Stage2/README）: 07_Build_and_Configuration/README.md
+      - 07_Build_and_Configuration/README.md
       - 深入路线图（Index）: 07_Build_and_Configuration/Index.md
       - Stage1 校正（Errata）: 07_Build_and_Configuration/Errata_to_Stage1.md
 # NAV_END (AUTO-GENERATED)
