feat: Enhance documentation structure and update Python version in CI workflow
- Added a comprehensive list of tools and their README files to the All_Pages.md for better navigation.
- Updated the GitHub Actions workflow to pin the Python version to 3.12, ensuring stability and avoiding pre-release issues.
- Refactored the page generation script to dynamically resolve the repository root, improving compatibility in CI environments.

--- a/.github/workflows/mkdocs-gh-pages.yml
+++ b/.github/workflows/mkdocs-gh-pages.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          # Pin to a stable CPython to avoid pre-release breakages (e.g. 3.14 on ubuntu-latest).
+          python-version: "3.12"
 
       - name: Install dependencies
         run: |
