refactor: Update navigation structure and exclude unnecessary directories
- Added "首页（00 总览）" entry to mkdocs.yml for improved navigation.
- Removed a comprehensive list of tools from All_Pages.md to streamline documentation.
- Updated generate_all_pages.py to exclude the "tools" directory from indexing, ensuring only relevant documentation is included.
- Enhanced generate_mkdocs_nav.py to maintain the index.md in navigation without creating a top-level "Home" entry.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ extra_css:
 # NAV_BEGIN (AUTO-GENERATED)
 nav:
   - 00 总览与方法论:
+      - 首页（00 总览）: index.md
       - 总索引（概览）: 00_Master_Index.md
       - 方法论 Checklist: 00_Methodology_Wiki_Review_Checklist.md
       - 全量页面索引（必备）: All_Pages.md
